# shader

./: .gitignore  CMakeLists.txt  Makefile  README.md
.claude/: settings.json
.claude/commands/: finish.md  impl.md  understand-deep.md  understand.md
docs/: references.md
docs/concepts/: 00-graphics-pipeline.md  01-hlsl-fundamentals.md  02-coordinate-spaces.md  03-vertex-transformation.md  04-normal-handling.md  05-texturing-sampling.md  06-lighting-models.md  07-phong-vs-pbr.md  08-pbr-theory.md  09-ibl.md  10-shadows.md  11-post-processing.md  12-anti-aliasing.md  13-ambient-occlusion.md  14-advanced-rendering.md  15-compute-shaders.md  16-optimization.md  17-procedural-noise.md  18-unreal-engine-shaders.md  19-slang.md  20-global-illumination.md  21-physical-camera.md  22-debug-rendering.md
docs/roadmap/: 01-hello-triangle.md  02-lighting.md  03-pbr.md  04-post-process.md  05-advanced-rendering.md  06-compute-effects.md  07-ray-tracing.md  08-character-rendering.md  09-environment-rendering.md  10-vfx-rendering.md  11-render-graph.md  12-unreal-integration.md  13-slang-rewrite.md  14-global-illumination.md  15-debug-rendering.md  16-advanced-shadows.md  17-mobile-optimization.md  overview.md
hello-triangle/: CMakeLists.txt
hello-triangle/shaders/: pixel.hlsl  vertex.hlsl
hello-triangle/src/: D3D12App.cpp  D3D12App.h  D3DApp.cpp  D3DApp.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp  main12.cpp
